# construction-bidding-system

./: .env.example  .gitignore  .pre-commit-config.yaml  ENHANCED_ANALYZER_IMPLEMENTATION.md  ENHANCED_BID_ENGINE_DOCUMENTATION.md  MULTI_FILE_UPLOAD_IMPLEMENTATION.md  Makefile  NAVIGATION_FIX_GUIDE.md  PROJECT_ORGANIZATION.md  README.md  RUN_APP_README.md  SCALABLE_PROJECT_STORAGE_IMPLEMENTATION.md  TROUBLESHOOTING.md  catalog_generator.py  commit_pace.sh  commit_pace_project.py  commit_to_github.py  debug_product_page.html  debug_product_page.py  debug_whitecap_structure.py  env.example  extraction_progress.json  human_like_extraction_progress.json  main.py  monitor_logs.py  pace_sample_catalog.json  pyproject.toml  requirements.txt  requirements_web_scraping.txt  reset_and_run_extraction.py  run_app.bat  run_app.sh  run_app_simple.sh  run_full_human_like_extraction.py  run_online_extraction.sh  run_simple_extraction.py  run_tests.py  run_ui_app.sh  run_whitecap_extraction.py  start_app.sh  (+14 more)
config/: __init__.py  catalog_sections.json  logging.conf  settings.py
data/: caltrans_reference.json
examples/: bid_engine_example.py  excel_generator_example.py  extract_full_whitecap_catalog.py  report_generator_example.py  scalable_upload_example.py  whitecap_online_extractor_example.py
output/catalogs/: whitecap_online_products_20250727_164144.sample
scripts/: setup_dev.py
src/: __init__.py
src/analyzers/: README.md  __init__.py  caltrans_analyzer.py  plan_analyzer.py  product_matcher.py  quantity_extractor.py
src/bidding/: README.md  __init__.py  advanced_bid_engine.py  bid_engine.py  pricing_calculator.py
src/calculators/: takeoff_calculations.py
src/extractors/: __init__.py  whitecap_extractor.py  whitecap_online_extractor.py
src/pace/: __init__.py  main.py
src/pace/cli/: __init__.py  main.py
src/pace/core/: config.py  logging.py
src/pace/models/: __init__.py  base.py  catalog.py  document.py  project.py  user.py
src/pace/services/: __init__.py  document_service.py  project_service.py  upload_service.py  user_service.py
src/quality/: enhanced_validator.py
src/utils/: README.md  __init__.py  catalog_loader.py  catalog_loader_README.md  data_validator.py  excel_generator.py  report_generator.py
tests/: README.md  conftest.py  test_analyzer.py  test_bid_engine.py  test_bidding.py  test_caltrans_analyzer.py  test_extractor.py  test_product_matcher.py
tests/unit/: test_models.py
ui/: FILE_UPLOAD_TROUBLESHOOTING.md  README.md  __init__.py  demo_app.py  logging_setup.py  simple_upload_test.py  test_buttons.py  test_file_upload.py  test_file_upload_fix.py
ui/components/: __init__.py  analysis_display.py  bid_generator.py  browser_navigation.py  enhanced_plan_viewer.py  file_upload.py  interactive_elements.py  multi_file_upload.py  onboarding_flow.py  progress_visualization.py  success_metrics.py
ui/styles/: app_styles.css
